--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://localhost:5000",
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
@@ -13,6 +13,7 @@
     "bootstrap": "^5.1.3",
     "mdb-react-ui-kit": "^2.4.0",
     "react": "^17.0.2",
+    "react-axios": "^2.0.5",
     "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
